# Copyright (C) 2012-2013  CEA/DEN, EDF R&D, OPEN CASCADE
#
# This library is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public
# License as published by the Free Software Foundation; either
# version 2.1 of the License.
#
# This library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with this library; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307 USA
#
# See http://www.salome-platform.org/ or email : webmaster.salome@opencascade.com
#

ADD_SUBDIRECTORY(deprecated)

# ===============================================================
# Files to be installed
# ===============================================================

# These files are data, module or lib files
SET(_adm_data
  FindQwt.cmake
  FindGUI.cmake
  FindSIP.cmake
  FindPyQt4.cmake
  FindSalomePyQt4.cmake
  FindSalomeQt4.cmake
  FindSalomeQwt.cmake
  FindSalomeSIP.cmake
  FindSalomeGUI.cmake
  FindSalomeOpenGL.cmake
  UsePyQt4.cmake
  UseQt4Ext.cmake
)
INSTALL(FILES ${_adm_data} DESTINATION ${SALOME_INSTALL_CMAKE_LOCAL})
